<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- sign_in_1 strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="button_label_string">Sing in with Gmail</string>
	<string name="button_label_ek1_string">Sing in with Facebook</string>
	<string name="button_label_ek2_string">Sign in with Email</string>
	<string name="welcome_john__sign_in_to_continue_string">Welcome to 4In Shield! \nSign in to continue</string>
	<string name="no_account__sign_up_string">No account? Sign up</string>
	<string name="button_label_ek3_string">Sing in</string>
	<string name="username_string">Username</string>
	<string name="forgot_password__string">Forgot password?</string>
	<string name="password_string">Password</string>
	<string name="username_ek1_string">Password</string>
	<string name="username_ek2_string">Confirm your password</string>
	<string name="button_label_ek4_string">Sing in</string>
	<string name="username_ek3_string">Email</string>
	<string name="username_ek4_string">Username</string>
	<string name="forgot_password__ek1_string">I herby accept terms and conditions</string>
	<string name="button_label_ek5_string">Next</string>
	<string name="button_label_ek6_string">Skip</string>
	<string name="welcome_john__sign_in_to_continue_ek3_string">Please add your childs devices</string>
	<string name="welcome_john__sign_in_to_continue_ek4_string">The information from your childs device will help us to assess their mental health, duration of sleep, places visited, used applications  etc. It also gives you the ability to block or allow installed applications</string>
	<string name="welcome_john__sign_in_to_continue_ek5_string">Please follow the following steps: Bring your childs mobile phoneScan this QR code with your childs device cameraYou will be redirected to the 4IN shield application download pageOnce the application is installed, click Next </string>
	<string name="username_ek5_string">Social network page URL</string>
	<string name="button_label_ek7_string">Next</string>
	<string name="button_label_ek8_string">Skip</string>
	<string name="username_ek6_string">Social network platform (Drop down)</string>
	<string name="username_ek7_string">Social network user name</string>
	<string name="welcome_john__sign_in_to_continue_ek6_string">Please enter your childs social media account information </string>
	<string name="welcome_john__sign_in_to_continue_ek7_string">This information will help us to protect your child from online abusive content and cyberharassment</string>
	<string name="username_ek8_string">Gender</string>
	<string name="username_ek9_string">Birth date</string>
	<string name="button_label_ek9_string">Next</string>
	<string name="button_label_ek10_string">Skip</string>
	<string name="username_ek10_string">First name</string>
	<string name="username_ek11_string">Last name</string>
	<string name="welcome_john__sign_in_to_continue_ek8_string">Please enter the required information to complete your childs profile</string>
	<string name="button_label_ek11_string">Continue</string>
	<string name="button_label_ek12_string">Add another child</string>
	<string name="welcome_john__sign_in_to_continue_ek9_string">Congradulation! You have successfully completed you child profile.</string>
	<string name="button_label_ek13_string">Go to dashboard</string>
	<string name="welcome_john__sign_in_to_continue_ek10_string">Thank you for your confidence in us.</string>
	<string name="welcome_john__sign_in_to_continue_ek11_string">Who is going to use this device?</string>
	<string name="child_string">Child</string>
	<string name="parents_string">Parents</string>
	<string name="welcome_john__sign_in_to_continue_ek12_string">Welcom to 4IN Shield</string>
	<string name="button_label_ek14_string">Start</string>
	<string name="welcome_john__sign_in_to_continue_ek13_string">Your childs profile information has been successfully added</string>
	<string name="button_label_ek15_string">Add new profile</string>
	<string name="button_label_ek16_string">Modify profile information</string>
	<string name="button_label_ek17_string">Continue</string>
	<string name="___string">Child first name</string>
	<string name="designer_string">Age</string>
	<string name="rebecca_morgan_string">First name Last name</string>
	<string name="__29_90_string">Danger Level</string>
	<string name="text_string">High</string>
	<string name="__29_90_ek1_string">Last night Sleep duration</string>
	<string name="text_ek1_string">8h</string>
	<string name="rebecca_morgan_ek1_string">Sleep depreviation!</string>
	<string name="_12_34_pm_string">12:34 PM</string>
	<string name="mama_always_said_lif_string">Mama always said life was like a box of chocolates. You never know what</string>
	<string name="rebecca_morgan_ek2_string">Toxic comment!</string>
	<string name="_12_34_pm_ek1_string">12:34 PM</string>
	<string name="mama_always_said_lif_ek1_string">Mama always said life was like a box of chocolates. You never know what</string>
	<string name="__29_90_ek2_string">Device usage</string>
	<string name="text_ek2_string">4h</string>
	<string name="__29_90_ek3_string">Phone call duration</string>
	<string name="text_ek3_string">4h</string>
	<string name="___ek1_string">Children List</string>
	<string name="__29_90_ek4_string">First name Last name</string>
	<string name="__29_90_ek5_string">First name Last name</string>
	<string name="__29_90_ek6_string">First name Last name</string>
	<string name="bitcoin_string">Last Alerts</string>
	<string name="templates_string">Phone usage</string>
	<string name="templates_ek1_string">Social media</string>
	<string name="templates_ek2_string">Alerts</string>
	<string name="templates_ek3_string">Dashbaord</string>
	<string name="day_string">Day</string>
	<string name="week_string">Week</string>
	<string name="month_string">Month</string>
	<string name="___ek2_string">Child first name</string>
	<string name="___ek3_string">Children List</string>
	<string name="__29_90_ek7_string">First name Last name</string>
	<string name="__29_90_ek8_string">First name Last name</string>
	<string name="__29_90_ek9_string">First name Last name</string>
	<string name="_34_string">14</string>
	<string name="_35_string">16</string>
	<string name="_36_string">18</string>
	<string name="_34_ek1_string">14</string>
	<string name="_35_ek1_string">16</string>
	<string name="_36_ek1_string">18</string>
	<string name="bitcoin_ek1_string">Mental State</string>
	<string name="templates_ek4_string">Phone usage</string>
	<string name="templates_ek5_string">Social media</string>
	<string name="templates_ek6_string">Alerts</string>
	<string name="templates_ek7_string">Dashbaord</string>
	<string name="justin_holmes_string">Justin Holmes</string>
	<string name="_13_11_pm_string">13:11 PM</string>
	<string name="you_don_t_understand_string">You dont understand! I coulda had class. I coulda been a contender. I couldve</string>
	<string name="rebecca_morgan_ek3_string">Rebecca Morgan</string>
	<string name="_12_34_pm_ek2_string">12:34 PM</string>
	<string name="mama_always_said_lif_ek2_string">Mama always said life was like a box of chocolates. You never know what</string>
	<string name="bitcoin_ek2_string">Last social media activites</string>
	<string name="___ek4_string">Child first name</string>
	<string name="templates_ek8_string">Phone usage</string>
	<string name="templates_ek9_string">Social media</string>
	<string name="templates_ek10_string">Alerts</string>
	<string name="templates_ek11_string">Dashbaord</string>
	<string name="___ek5_string">Children List</string>
	<string name="__29_90_ek10_string">First name Last name</string>
	<string name="__29_90_ek11_string">First name Last name</string>
	<string name="__29_90_ek12_string">First name Last name</string>
	<string name="last_week_string">Last Week</string>
	<string name="_33_string">12</string>
	<string name="bitcoin_ek3_string">Sleep Duration</string>
	<string name="last_list_item_string">The Last Item</string>
	<string name="on_string">On</string>
	<string name="additional_option_string">Additional Option</string>
	<string name="fifth_list_item_string">Fifth List Item</string>
	<string name="third_value_string">Third value</string>
	<string name="anything_else_string">Anything Else</string>
	<string name="third_list_item_string">Third List Item</string>
	<string name="on_ek1_string">On</string>
	<string name="one_more_option_string">One More Option</string>
	<string name="off_string">Off</string>
	<string name="first_value_string">First value</string>
	<string name="first_list_item_string">First List Item</string>
	<string name="on_ek2_string">On</string>
	<string name="one_more_option_ek1_string">Camera</string>
	<string name="off_ek1_string">Off</string>
	<string name="first_list_item_ek1_string">Google Chrome</string>
	<string name="templates_ek12_string">Dahsboard</string>
	<string name="templates_ek13_string">Social media</string>
	<string name="templates_ek14_string">Alerts</string>
	<string name="templates_ek15_string">Control</string>
	<string name="___ek6_string">Parental Control</string>
</resources>