<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/content_container"
	android:background="@drawable/noise_texture_light_shape">






<RelativeLayout android:id="@+id/page_adddevice_ek1"
	android:layout_centerHorizontal="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<RelativeLayout
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/frame_1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp">

		<RelativeLayout
			android:id="@+id/button___normal_ek8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="50dp"
			android:background="@drawable/background_color_ek3_shape">


			<TextView
				android:id="@+id/button_label_ek8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingStart="30dp"
				android:paddingTop="12dp"
				android:paddingEnd="30dp"
				android:paddingBottom="12dp"
				android:text="@string/button_label_ek8_string"
				android:textColor="@color/button_label_color"
				android:textSize="18sp" />

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/button___normal_ek7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="80dp"
			android:layout_marginEnd="50dp"
			android:layout_toRightOf="@+id/button___normal_ek8"
			android:background="@drawable/background_color_ek3_shape">


			<TextView
				android:id="@+id/button_label_ek7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="13dp"
				android:layout_marginEnd="13dp"
				android:padding="12dp"
				android:text="@string/button_label_ek7_string"
				android:textColor="@color/button_label_color"
				android:textSize="18sp" />

			<ImageView
				android:id="@+id/path_ek3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginStart="5dp"
				android:layout_marginEnd="10dp"
				android:layout_toRightOf="@+id/button_label_ek7"
				android:contentDescription="path_ek3"
				android:src="@drawable/path_ek3" />


		</RelativeLayout>

	</RelativeLayout>

	<TextView
		android:id="@+id/welcome_john__sign_in_to_continue_ek3"
		android:layout_width="322dp"
		android:layout_height="110dp"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginLeft="34dp"
		android:layout_marginTop="60dp"
		android:gravity="center"
		android:text="@string/welcome_john__sign_in_to_continue_ek3_string"
		android:textColor="@color/_bg__sign_in_1_ek2_color"
		android:textSize="30sp" />

	<TextView
		android:id="@+id/welcome_john__sign_in_to_continue_ek4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/welcome_john__sign_in_to_continue_ek3"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/welcome_john__sign_in_to_continue_ek4_string"
		android:textColor="@color/_bg__sign_in_1_ek2_color"
		android:textSize="15sp" />

	<TextView
		android:id="@+id/welcome_john__sign_in_to_continue_ek5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/welcome_john__sign_in_to_continue_ek4"
		android:layout_marginStart="20dp"
		android:layout_marginTop="30dp"
		android:layout_marginEnd="20dp"
		android:text="@string/welcome_john__sign_in_to_continue_ek5_string"
		android:textColor="@color/_bg__sign_in_1_ek2_color"
		android:textSize="18sp" />



	<ImageView
		android:id="@+id/frame_1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/welcome_john__sign_in_to_continue_ek5"
		android:layout_marginStart="87dp"
		android:layout_marginTop="30dp"
		android:contentDescription="frame_1"
		android:src="@drawable/frame_1" />

	<RelativeLayout
		android:id="@+id/component___home_indicator_ek6"
		android:layout_width="150dp"
		android:layout_height="6dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="10dp"
		android:background="@drawable/dark_color_13_ek6_shape">


	</RelativeLayout>

			</RelativeLayout>








		</RelativeLayout>
