<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/content_container"
	android:background="@drawable/noise_texture_light_shape">


	<RelativeLayout
		android:id="@+id/component___button___normal_ek3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/component___input_text_field___large_ek1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="80dp"
		android:background="@drawable/background_color_ek3_shape">


		<TextView
			android:id="@+id/button_label_ek3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="13dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="13dp"
			android:layout_marginBottom="10dp"
			android:text="@string/button_label_ek3_string"
			android:textColor="@color/button_label_color"
			android:textSize="18sp"
			android:textStyle="bold" />

		<ImageView
			android:id="@+id/path_ek3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="10dp"
			android:layout_toRightOf="@+id/button_label_ek3"
			android:contentDescription="path_ek3"
			android:src="@drawable/path_ek3" />


	</RelativeLayout>


				<RelativeLayout android:id="@+id/component___input_text_field___large"
					android:layout_marginTop="70dp"
					android:layout_marginStart="40dp"
					android:layout_marginEnd= "40dp"
					android:layout_below="@+id/welcome_john__sign_in_to_continue_ek1"
					android:layout_width="match_parent"
					android:background="@drawable/background_color_ek4_shape"
					android:layout_height="wrap_content"
					>

					<EditText
						android:id="@+id/Username"
						android:layout_width="match_parent"
						android:layout_height="50dp"
						android:background="@null"
						android:hint="@string/username_string"
						android:paddingStart="20dp"
						android:textSize="18dp" />
				</RelativeLayout>


				<RelativeLayout android:id="@+id/component___input_text_field___large_ek1"
					android:layout_marginTop="20dp"
					android:layout_below="@+id/component___input_text_field___large"
					android:layout_marginStart="40dp"
					android:layout_marginEnd= "40dp"
					android:layout_width="match_parent"
					android:background="@drawable/background_color_ek4_shape"
					android:layout_height="wrap_content"
					>

					<EditText
						android:id="@+id/Password"
						android:layout_width="match_parent"
						android:layout_height="50dp"
						android:background="@null"
						android:hint="@string/password_string"
						android:paddingStart="20dp"
						android:textSize="18dp"
						android:inputType="textPassword"/>

				</RelativeLayout>

	<TextView
		android:id="@+id/welcome_john__sign_in_to_continue_ek1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/microsoftteams_image__23__2"
		android:layout_marginStart="52dp"
		android:layout_marginTop="80dp"
		android:text="@string/welcome_john__sign_in_to_continue_string"
		android:textColor="@color/_bg__sign_in_1_ek2_color"
		android:textSize="22sp" />


				<RelativeLayout android:id="@+id/component___home_indicator_ek1"
					android:layout_marginTop="810dp"
					android:layout_marginStart="-2dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/dark_color_13_ek1"
						android:background="@drawable/dark_color_13_ek1_shape"
						 android:alpha="0.12999999523163"
						 android:layout_marginStart="120dp"
						android:layout_marginTop="20dp"
						android:layout_width="150dp"
						android:layout_height="6dp" />

				</RelativeLayout>


	<TextView
		android:id="@+id/forgot_password_"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/component___button___normal_ek3"
		android:layout_marginStart="52dp"
		android:layout_marginTop="20dp"
		android:text="@string/forgot_password__string"
		android:textColor="@color/_bg__sign_in_1_ek2_color"
		android:textSize="18dp" />



				<View   android:id="@+id/underline_ek1"
					android:background="@drawable/underline_ek1_shape"
					android:layout_below="@id/forgot_password_"
					android:layout_alignLeft="@id/forgot_password_"
					android:layout_alignRight="@id/forgot_password_"
					android:layout_marginTop="5dp"
					android:layout_width="0dp"
					android:layout_height="2dp"
					/>

	<ImageView
		android:id="@+id/microsoftteams_image__23__2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="57dp"
		android:contentDescription="microsoftteams_image__23__2"
		android:src="@drawable/microsoftteams_image__23__2" />

			</RelativeLayout>







